<resources>
    <string name="app_name">CardioSmart</string>
    <string name="login">SIGN IN</string>
    <string name="heart_info_title">My Heart</string>
    <string name="heart_status">Status</string>
    <string name="details_title">Details</string>

    <string name="title_activity_details">DetailsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="healthy">Healthy</string>
    <string name="view_health_tips">View Health Tips</string>
    <string name="simulate_alert">Simulate Alert</string>
    <string name="todo">TODO</string>
</resources>
