<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HeartInfoActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/backdrop"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="handleBack"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_back_arrow"
            android:onClick="handleBack"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto_light"
            android:gravity="center"

            android:text="@string/heart_info_title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/title"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"

            android:fontFamily="@font/roboto_light"
            android:gravity="left"

            android:text="@string/heart_rate"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/smallHeart"
            android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            android:layout_gravity="left"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/smallHeart"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-5dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_heartbeat"
                android:contentDescription="@string/todo" />



        </RelativeLayout>'

            <!--com.github.mikephil.charting.charts.LineChart
                android:layout_below="@id/topbar"
                android:id="@+id/chart"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/-->


            <!--add canvas here-->
            <me.ausaf.cardiosmart.HeartRateView
                android:id="@+id/ppg"
                android:layout_below="@id/topbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"

            android:fontFamily="@font/roboto_light"
            android:gravity="left"

            android:text="@string/heart_status"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />


        <android.support.v7.widget.CardView
            android:onClick="handleStatusClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/riskStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingBottom="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:text="@string/healthy"
                    android:textColor="@color/colorHealthy"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView

                    android:layout_below="@id/riskStatus"
                    android:id="@+id/statusHeart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-40dp"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="30dp"
                    app:srcCompat="@drawable/ic_heart_green"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>


        </android.support.v7.widget.CardView>

        <!--Button
            android:id="@+id/tips"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_health_tips"
            android:fontFamily="@font/roboto_light"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_white"
            android:layout_marginBottom="10dp"
            android:onClick="showTips"
            /-->


        <Button
            android:id="@+id/simulate"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simulate_alert"
            android:fontFamily="@font/roboto_light"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_white"
            android:layout_marginBottom="20dp"
            android:onClick="handleSimClick"
            />



    </LinearLayout>
    </ScrollView>


</RelativeLayout>